syntax = "proto3";

package Game;

service StateUpdate {
  rpc GetIncrementalMapUpdate(IncrementalMapUpdateRequest) returns (stream IncrementalMapUpdateResponse) {}
  rpc GetMiscGameStateUpdate(MiscStateUpdateRequest) returns (stream MiscStateUpdateResponse) {}
}



message IncrementalMapUpdateRequest {
  // Empty request
}

message IncrementalMapUpdateResponse {
  message IncrementalMapUpdate {
    RelativeCoordinate spawnRelativeCoordinate = 1;
    PixelTypes type = 2;
    PixelGuild guild = 3;
    PixelUser owner = 4;
    bytes backgroundGraphic = 5;
  }
  
  repeated IncrementalMapUpdate updates = 1;
}

message MiscStateUpdateRequest {
  // Empty request
}

message MiscStateUpdateResponse {
  message PixelBucket {
    uint32 amount = 1;
    uint32 maxAmount = 2;
    float increasePerMinute = 3;
  }

  message Scores {
    PixelGuild guild = 1;
    uint32 amount = 2;
  }

  message PowerUps {
    uint32 powerUpId = 1;
    bool Directed = 2 [json_name = "Directed"];
    string name = 3;
    string description = 4;
  }

  message Notification {
    string message = 1;
  }

  PixelBucket pixelBucket = 1;
  repeated Scores scores = 2;
  repeated PowerUps powerUps = 3;
  Notification notification = 4;
  bool powerupUpdate = 5;
}



message PixelUser {
    int32 id = 1;
}

message RelativeCoordinate {
    int32 x = 1;
    int32 y = 2;
}

enum PixelTypes {
  Normal = 0;
  MapBorder = 1;
  Spawn = 2;
  FogOfWar = 3;
}
 
enum PixelGuild {
  Nobody = 0;
  Tietokilta = 1;
  Algo = 2;
  Cluster = 3;
  OulunTietoteekkarit = 4;
  TietoTeekkarikilta = 5;
  Digit = 6;
  Sosa = 7;
  Date = 8;
  Tutti = 9;
}